--- a/cssThemes/default.css
+++ b/cssThemes/default.css
@@ -51,12 +51,13 @@ h6 {
 }
 
 ul, ol {
-  padding-left: 12px;
+  padding-left: 1.0em;
+  list-style-position: inside;
 }
-ul{ /*<span  class="css_edit_note">无序列表</span>*/
+ul{
     list-style-type: disc;
 }
-ol { /*<span  class="css_edit_note">有序列表</span>*/
+ol {
   list-style-type: decimal;
 }
 li * {
